add club board service

--- a/ClubMembership/Pages/Shared/_Layout.cshtml
+++ b/ClubMembership/Pages/Shared/_Layout.cshtml
@@ -49,5 +49,6 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
+    @await RenderSectionAsync("Styles", false);
 </body>
 </html>
