add CRUD for activity

--- a/ClubMembership/Pages/President/Clubs/Index.cshtml
+++ b/ClubMembership/Pages/President/Clubs/Index.cshtml
@@ -9,3 +9,7 @@
 }
 <h1>@club.Name</h1>
 <img src="@club.LogoUrl" alt="logo" style="object-fit: cover; height: 100px; width: 100px"/>
+<br/>
+<a class="btn btn-primary mb-1" href="./Memberships">Memberships</a>
+<a class="btn btn-primary mb-1" href="./Activities">Activities</a>
+<a class="btn btn-primary mb-1" href="./clubboards">Club boards</a>
