--- a/ClubMembership/Pages/President/Memberships/Create.cshtml
+++ b/ClubMembership/Pages/President/Memberships/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div hidden="hidden" class="form-group">
                 <label asp-for="Membership.ClubId" class="control-label"></label>
-                <input asp-for="Membership.ClubId" class ="form-control" value="@Model.ClubId"/>
+                <input asp-for="Membership.ClubId" class ="form-control" value="@Model.clubId"/>
             </div>
             <div class="form-group">
                 <label asp-for="Membership.StudentId" class="control-label"></label>
