add pagination and clean up project

--- a/ClubMembership/Pages/President/ClubBoards/Create.cshtml
+++ b/ClubMembership/Pages/President/ClubBoards/Create.cshtml
@@ -9,7 +9,7 @@
 
 <h4>ClubBoard</h4>
 <hr />
-<div class="row">
+<div class="row mb-1">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
