--- a/ClubMembership/Pages/President/Clubs/Edit.cshtml
+++ b/ClubMembership/Pages/President/Clubs/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h4>Update @Model.Club.Name</h4>
 <hr />
-<div class="row">
+<div class="row mb-1">
     <div class="col-md-4">
         <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
