--- a/ClubMembership/Pages/President/ClubBoards/Details.cshtml
+++ b/ClubMembership/Pages/President/ClubBoards/Details.cshtml
@@ -8,8 +8,8 @@
 <div id="clubboard-name">
     <h1>@Model.ClubBoard.Name</h1>
 </div>
-<h2>Add Member</h2>
-<form method="post" >
+<h4>Add Member</h4>
+<form method="post" class="mb-1">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div hidden="hidden" class="form-group">
             <input asp-for="ClubBoardId" value="@Model.ClubBoardId" />
@@ -44,8 +44,7 @@
         </tbody>
     </table>
 }
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.ClubBoard?.Id" class="btn btn-primary">Edit</a>
+<div class="mt-1">
     <a asp-page="./Index" class="btn btn-primary">Back to List</a>
 </div>
 
